Fixed overflow

--- a/src/main/resources/static/footer.css
+++ b/src/main/resources/static/footer.css
@@ -1,5 +1,4 @@
 footer {
-    width:100vw;
     padding: 10rem;
     text-align: center;
 }
